--- a/src/app/item-table.component.html
+++ b/src/app/item-table.component.html
@@ -2,7 +2,7 @@
     <thead>
     <tr class="slds-text-heading--label">
         <th scope="col">
-            <button class="slds-button slds-button--icon" (click)="onDeleteAllClick($event)">
+            <button class="slds-button slds-button--icon" (click)="onDeleteAllClick($event)" >
                 <svg aria-hidden="true" class="slds-button__icon">
                     <use xlink:href="../node_modules/@salesforce-ux/design-system/assets/icons/action-sprite/svg/symbols.svg#remove"></use>
                 </svg>
@@ -36,6 +36,6 @@
     </tr>
     </thead>
     <tbody>
-        <tr class="item-row" *ngFor="let item of itemList" [item]="item"></tr>
+        <tr class="item-row" *ngFor="let item of itemList; let itemIndex = index" [item]="item" [itemIndex]="itemIndex"></tr>
     </tbody>
 </table>
