--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="slds">
     <div class="slds-grid slds-wrap slds-grid--pull-padded slds-p-around--medium">
-        <div class="slds-col--padded slds-size--1-of-1 slds-p-around--medium item-table" [itemList]="order.itemList" (deleteAllItems)="order.onDeleteAllItems()"></div>
+        <div class="slds-col--padded slds-size--1-of-1 slds-p-around--medium item-table" [itemList]="order.itemList" [orderService]="orderService" ></div>
         <div class="slds-col--padded slds-size--1-of-1 slds-p-around--medium">
             <fieldset class="slds-form--compound">
                 <legend class="slds-form-element__label">Order Details</legend>
@@ -26,7 +26,7 @@
                     <div class="slds-form-element__row">
                         <div class="slds-form-element slds-size--1-of-1">
                             <label class="slds-form-element__label" for="donationAmount">Donation Amount</label>
-                            <input id="donationAmount" class="slds-input" type="number"/>
+                            <input id="donationAmount" class="slds-input" type="number" [(ngModel)]="order.donationAmount" (change)="onDonationChange($event)"/>
                         </div>
                     </div>
                     <div class="slds-form-element__row">
@@ -43,30 +43,30 @@
                     <div class="slds-form-element__row">
                         <div class="slds-form-element slds-size--1-of-2">
                             <label class="slds-form-element__label" for="firstName">First Name</label>
-                            <input id="firstName" class="slds-input" type="text" />
+                            <input id="firstName" class="slds-input" type="text" [(ngModel)]="order.firstName" />
                         </div>
                         <div class="slds-form-element slds-size--1-of-2">
                             <label class="slds-form-element__label" for="lastName">Last Name</label>
-                            <input id="lastName" class="slds-input" type="text"/>
+                            <input id="lastName" class="slds-input" type="text" [(ngModel)]="order.lastName" />
                         </div>
                     </div>
                     <div class="slds-form-element__row">
                         <div class="slds-form-element slds-size--1-of-2">
                             <label class="slds-form-element__label" for="email">Email</label>
-                            <input id="email" class="slds-input" type="email"/>
+                            <input id="email" class="slds-input" type="email" [(ngModel)]="order.email" />
                         </div>
                         <div class="slds-form-element slds-size--1-of-2">
                             <label class="slds-form-element__label" for="phone">Phone</label>
-                            <input id="phone" class="slds-input" type="text" />
+                            <input id="phone" class="slds-input" type="text" [(ngModel)]="order.phone"/>
                         </div>
                     </div>
                 </div>
             </fieldset>
             <billing-address [order]="order"></billing-address>
-            <delivery-method [order]="order" (deliveryMethodChanged)="order.onDeliveryMethodChange($event)"></delivery-method>
+            <delivery-method [order]="order" [orderService]="orderService"></delivery-method>
             <div class="slds-p-top--medium" *ngIf="order.deliveryMethod === 'Ship'" >
-                <a href="#" class="slds-button slds-button--brand slds-m-bottom--medium" (click)="onCopyBillingToShippingClick($event)">Copy Billing Address</a>
-                <shipping-address [order]="order"></shipping-address>
+                <a href="#" class="slds-button slds-button--brand slds-m-bottom--medium" (click)="onCopyBillingToShipping($event)">Copy Billing Address</a>
+                <shipping-address [order]="order" ></shipping-address>
             </div>
         </div>
     </div>
